crates/tests/fixtures/compile_errors/invalid_compiler_version.fe
pragma <=0.1.0

contract foo:
    pass